@@ -1084,33 +1084,33 @@ test_doesManPageHaveRunnableExample <- function()
 test_packageAlreadyExists <- function()
 {
     .zeroCounters()
-    BiocCheck:::checkIsPackageAlreadyInRepo("GenomicRanges", "CRAN")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GenomicRanges", "CRAN")
     checkEquals(.error$getNum(),0)
-    BiocCheck:::checkIsPackageAlreadyInRepo("devtools", "CRAN")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("devtools", "CRAN")
     checkEquals(.error$getNum(),1)
-    BiocCheck:::checkIsPackageAlreadyInRepo("GenomicRanges", "BioCsoft")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GenomicRanges", "BioCsoft")
     checkEquals(.error$getNum(),2)
-    BiocCheck:::checkIsPackageAlreadyInRepo("GO.db", "BioCann")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GO.db", "BioCann")
     checkEquals(.error$getNum(),3)
-    BiocCheck:::checkIsPackageAlreadyInRepo("TENxBrainData", "BioCexp")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("TENxBrainData", "BioCexp")
     checkEquals(.error$getNum(),4)
-    BiocCheck:::checkIsPackageAlreadyInRepo("annotation", "BioCworkflows")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("annotation", "BioCworkflows")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("GenomicRanges", "BioCexp")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GenomicRanges", "BioCexp")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("GenomicRanges", "BioCann")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GenomicRanges", "BioCann")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("GenomicRanges", "BioCworkflows")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("GenomicRanges", "BioCworkflows")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("ImNotFound", "BioCexp")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("ImNotFound", "BioCexp")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("ImNotFound", "BioCann")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("ImNotFound", "BioCann")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("ImNotFound", "BioCworkflows")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("ImNotFound", "BioCworkflows")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("ImNotFound", "CRAN")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("ImNotFound", "CRAN")
     checkEquals(.error$getNum(),5)
-    BiocCheck:::checkIsPackageAlreadyInRepo("ImNotFound", "BioCsoft")
+    BiocCheck:::checkIsPackageNameAlreadyInUse("ImNotFound", "BioCsoft")
     checkEquals(.error$getNum(),5)
     .zeroCounters()
 }
